# ai-server-audit

./: LICENSE  README.md
cli/: main.go
config/: audit.example.json
core/: Cargo.toml
core/src/: lib.rs
scripts/: install.sh
