[package]
name = "audit_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "audit_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
